--- a/weather.html
+++ b/weather.html
@@ -50,7 +50,7 @@
         async function getWeather() {
             try {
                 const city = document.getElementById('city').value;
-                const apiKey = '767f968805ec44028d0184313242810'; // Replace with your WeatherAPI key
+                const apiKey = 000 ; // Replace with your WeatherAPI key
                 const response = await fetch(`https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${city}&aqi=no`);
                 if (!response.ok) throw new Error('City not found');  // Handle non-200 responses
                 const data = await response.json();
